[package]
name = "cds"
version = "0.1.0"
authors = ["Taewoo An <taewoo.an@kaist.ac.kr>"]
edition = "2018"

[features]
default = ["concurrent_stat"]
concurrent_stat = []

[dependencies]
crossbeam-epoch = "0.9.5"
crossbeam-utils = "0.8.5"
rand = "0.8.4"
thread_local = "1.1.4"

[dev-dependencies]
criterion = "0.3.4"
num_cpus = "1.13.0"
crossbeam-queue = "0.3.5"

[[bench]]
name = "stack"
harness = false

[[bench]]
name = "queue"
harness = false

[[bench]]
name = "avltree"
harness = false

[[bench]]
name = "btree"
harness = false
