[package]
name = "cds"
version = "0.1.0"
authors = ["Taewoo An <taewoo.an@kaist.ac.kr>"]
edition = "2018"

[features]
default = ["concurrent_stat"]
concurrent_stat = []

[dependencies]
arr_macro = "0.1.3"
crossbeam-epoch = "0.9.5"
crossbeam-utils = "0.8.5"
either = "1.6.1"
parking_lot = "0.12.1"
rand = "0.8.4"
thread_local = "1.1.4"
uninit = "0.5.1"

[dev-dependencies]
criterion = "0.3.4"
crossbeam-queue = "0.3.5"
num_cpus = "1.13.0"

[[bench]]
name = "stack"
harness = false

[[bench]]
name = "queue"
harness = false

[[bench]]
name = "avltree"
harness = false

[[bench]]
name = "btree"
harness = false
